refactor: organize the solution in layers

--- a/ChatChallenge/ChatWebApp/ChatWebApp.csproj
+++ b/ChatChallenge/ChatWebApp/ChatWebApp.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chat.App\Chat.App.csproj" />
+    <ProjectReference Include="..\Chat.Services\Chat.Services.csproj" />
+  </ItemGroup>
+
 </Project>
