--- a/ChatChallenge/Chat.QueueManager/Chat.QueueManager.csproj
+++ b/ChatChallenge/Chat.QueueManager/Chat.QueueManager.csproj
@@ -1,12 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.8" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Chat.Models\Chat.Models.csproj" />
   </ItemGroup>
 
 </Project>
