--- a/ChatChallenge/ChatBotWorker/appsettings.json
+++ b/ChatChallenge/ChatBotWorker/appsettings.json
@@ -9,6 +9,7 @@
   "SharedSettings": {
     "QueueSettings": {
       "Address": "localhost"
-    }
+    },
+    "StockWebServiceUrl": "https://stooq.com/q/l/?s={stock_code}&f=sd2t2ohlcv&h&e=csv"
   }
 }
