refactor: simplify appsettings

--- a/ChatChallenge/ChatBotWorker/appsettings.json
+++ b/ChatChallenge/ChatBotWorker/appsettings.json
@@ -7,9 +7,7 @@
     }
   },
   "SharedSettings": {
-    "QueueSettings": {
-      "Address": "localhost"
-    },
+    "QueueUrl":  "localhost",
     "StockWebServiceUrl": "https://stooq.com/q/l/?s={stock_code}&f=sd2t2ohlcv&h&e=csv"
   }
 }
