--- a/ChatChallenge/ChatWebApp/appsettings.json
+++ b/ChatChallenge/ChatWebApp/appsettings.json
@@ -10,8 +10,6 @@
     }
   },
   "SharedSettings": {
-    "QueueSettings": {
-      "Address": "localhost"
-    }
+    "QueueUrl": "localhost"
   }
 }
