--- a/ChatChallenge/Chat.CommandInterpreter/Chat.CommandInterpreter.csproj
+++ b/ChatChallenge/Chat.CommandInterpreter/Chat.CommandInterpreter.csproj
@@ -6,11 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.8" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Chat.Models\Chat.Models.csproj" />
+    <ProjectReference Include="..\Chat.QueueManager\Chat.QueueManager.csproj" />
     <ProjectReference Include="..\Chat.WebService\Chat.WebService.csproj" />
   </ItemGroup>
 
