test: add test for command interpreter

--- a/ChatChallenge/Chat.Test/Chat.Test.csproj
+++ b/ChatChallenge/Chat.Test/Chat.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Chat.CommandInterpreter\Chat.CommandInterpreter.csproj" />
     <ProjectReference Include="..\Chat.QueueManager\Chat.QueueManager.csproj" />
     <ProjectReference Include="..\Chat.WebService\Chat.WebService.csproj" />
   </ItemGroup>
