refactor: spliting queue manager in producer and listener

--- a/ChatChallenge/Chat.Test/Chat.Test.csproj
+++ b/ChatChallenge/Chat.Test/Chat.Test.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Chat.CommandInterpreter\Chat.CommandInterpreter.csproj" />
     <ProjectReference Include="..\Chat.QueueManager\Chat.QueueManager.csproj" />
+    <ProjectReference Include="..\Chat.QueueProducer\Chat.QueueProducer.csproj" />
     <ProjectReference Include="..\Chat.WebService\Chat.WebService.csproj" />
   </ItemGroup>
 
