fix: several changes trying to solve bug with messages in ChatBot

--- a/ChatChallenge/Chat.Services/Chat.Services.csproj
+++ b/ChatChallenge/Chat.Services/Chat.Services.csproj
@@ -11,7 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Chat.Models\Chat.Models.csproj" />
-    <ProjectReference Include="..\Chat.QueueManager\Chat.QueueManager.csproj" />
+    <ProjectReference Include="..\Chat.QueueConsumer\Chat.QueueConsumer.csproj" />
+    <ProjectReference Include="..\Chat.QueueProducer\Chat.QueueProducer.csproj" />
   </ItemGroup>
 
 </Project>
