--- a/ChatChallenge/Chat.CommandInterpreter/Chat.CommandInterpreter.csproj
+++ b/ChatChallenge/Chat.CommandInterpreter/Chat.CommandInterpreter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Chat.Models\Chat.Models.csproj" />
-    <ProjectReference Include="..\Chat.QueueManager\Chat.QueueManager.csproj" />
+    <ProjectReference Include="..\Chat.QueueProducer\Chat.QueueProducer.csproj" />
     <ProjectReference Include="..\Chat.WebService\Chat.WebService.csproj" />
   </ItemGroup>
 
