refactor: database converted to sqlite for easier setup

--- a/ChatChallenge/ChatWebApp/appsettings.json
+++ b/ChatChallenge/ChatWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ChatWebApp-2AB13595-D41D-4104-9692-BEAAD08E9A91;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=Database.db"
   },
   "Logging": {
     "LogLevel": {
