feature: configure dockers and docker compose to run rabbitmq and the separate projects dockers

--- a/ChatChallenge/ChatBotWorker/appsettings.json
+++ b/ChatChallenge/ChatBotWorker/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "SharedSettings": {
-    "QueueUrl":  "localhost",
+    "QueueUrl": "rabbitmq",
     "StockWebServiceUrl": "https://stooq.com/q/l/?s={stock_code}&f=sd2t2ohlcv&h&e=csv"
   }
 }
